labs/06-ingress-controller/yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - <host>
    secretName: tls-secret
  rules:
  - host: <host>
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
